traces/bug_628.txt
src/medit/inout_popenbinaire.c:949: error: DEAD_STORE
  The value written to &natureread (type char*) is never used.
Showing all 1 steps of the trace


src/medit/inout_popenbinaire.c:949:2: Write of unused value
947.       if( mesh->dim == 3 && mesh->nhex ){
948.         if(  KwdCod == GmfSolAtHexahedra ){
949.   	natureread = "SolAtHexahedra";
        ^
950.   	fread( (unsigned char *)&NulPos ,WrdSiz, 1, stdin);
951.   	fread( (unsigned char *)&nel ,WrdSiz, 1, stdin);
